--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,9 +2,9 @@ name: CI
 on:
   pull_request:
   push:
-    branch:
+    branches:
       - master
-      - release**
+      - release/*
     tags:
       - v**
 
