--- a/Project.toml
+++ b/Project.toml
@@ -26,9 +26,9 @@ UUIDs = "cf7118a7-6976-5b1a-9a39-7adc72f591a4"
 Unmarshal = "cbff2730-442d-58d7-89d1-8e530c41eb02"
 
 [compat]
-Colors = "0.8, 0.9, 0.10, 0.11, 0.12"
-Distributions = "0.18, 0.19, 0.20, 0.21, 0.22, 0.23, 0.24, 0.25, 1"
-DocStringExtensions = "0.8, 0.9, 0.10, 1"
+Colors = "0.10, 0.11, 0.12"
+Distributions = "0.23, 0.24, 0.25"
+DocStringExtensions = "0.8"
 Graphs = "1.4"
 GraphPlot = "0.5.0"
 JSON = "0.21"
@@ -37,12 +37,12 @@ LightGraphs = "1.2, 1.3"
 ManifoldsBase = "0.11, 0.12"
 Neo4j = "2"
 Pkg = "1.4, 1.5"
-Reexport = "0.2, 0.3, 0.4, 0.5, 1"
-Requires = "0.5, 1"
+Reexport = "1"
+Requires = "1"
 TensorCast = "0.3.3, 0.4"
 TimeZones = "1.3.1"
 Unmarshal = "0.4"
-julia = "1.4"
+julia = "1.6"
 
 [extras]
 GraphPlot = "a2cc645c-3eea-5389-862e-a155d0052231"
