--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,7 +7,7 @@ on:
       - release/*
     tags:
       - v**
-
+  workflow_dispatch:
 jobs:
   test:
     name: Julia ${{ matrix.version }} - ${{ matrix.os }} - ${{ matrix.arch }}
@@ -125,6 +125,8 @@ jobs:
             ${{ runner.os }}-
 
       - name: Julia Build Pkg
+        env:
+          DFG_USE_CGDFG: true
         uses: julia-actions/julia-buildpkg@latest
       
       - name: Git Test Credentials
