--- a/Project.toml
+++ b/Project.toml
@@ -17,6 +17,7 @@ ManifoldsBase = "3362f125-f0bb-47a3-aa74-596ffd7ef2fb"
 Neo4j = "d2adbeaf-5838-5367-8a2f-e46d570981db"
 OrderedCollections = "bac558e1-5e72-5ebc-8fee-abe8a469f55d"
 Pkg = "44cfe95a-1eb2-52ea-b672-e2afdf69b78f"
+ProgressMeter = "92933f4c-e287-5a05-a399-4b506db050ca"
 RecursiveArrayTools = "731186ca-8d62-57ce-b412-fbd966d074cd"
 Reexport = "189a3867-3050-52da-a836-e630ba90ab69"
 Requires = "ae029012-a4dd-5104-9daa-d747884805df"
@@ -40,6 +41,7 @@ ManifoldsBase = "0.11, 0.12, 0.13"
 Neo4j = "2"
 OrderedCollections = "1.4"
 Pkg = "1.4, 1.5"
+ProgressMeter = "1"
 RecursiveArrayTools = "2"
 Reexport = "1"
 Requires = "1"
