--- a/Project.toml
+++ b/Project.toml
@@ -35,7 +35,7 @@ Graphs = "1.4"
 JSON = "0.21"
 JSON2 = "0.3.1"
 JSON3 = "1"
-ManifoldsBase = "0.13, 0.14"
+ManifoldsBase = "0.12, 0.13, 0.14"
 OrderedCollections = "1.4"
 Pkg = "1.4, 1.5"
 ProgressMeter = "1"
