--- a/Project.toml
+++ b/Project.toml
@@ -39,6 +39,7 @@ ProgressMeter = "1"
 RecursiveArrayTools = "2"
 Reexport = "1"
 Requires = "1"
+StructTypes = "1"
 TensorCast = "0.3.3, 0.4"
 TimeZones = "1.3.1"
 julia = "1.6"
