--- a/Project.toml
+++ b/Project.toml
@@ -42,6 +42,7 @@ ProgressMeter = "1"
 RecursiveArrayTools = "2"
 Reexport = "1"
 Requires = "1"
+StaticArrays = "1"
 StructTypes = "1"
 TensorCast = "0.3.3, 0.4"
 TimeZones = "1.3.1"
