--- a/Project.toml
+++ b/Project.toml
@@ -18,7 +18,6 @@ Pkg = "44cfe95a-1eb2-52ea-b672-e2afdf69b78f"
 ProgressMeter = "92933f4c-e287-5a05-a399-4b506db050ca"
 RecursiveArrayTools = "731186ca-8d62-57ce-b412-fbd966d074cd"
 Reexport = "189a3867-3050-52da-a836-e630ba90ab69"
-Requires = "ae029012-a4dd-5104-9daa-d747884805df"
 SHA = "ea8e919c-243c-51af-8825-aaa63cd721ce"
 SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
@@ -26,6 +25,12 @@ StructTypes = "856f2bd8-1eba-4b0a-8007-ebc267875bd4"
 TensorCast = "02d47bb6-7ce6-556a-be16-bb1710789e2b"
 TimeZones = "f269a46b-ccf7-5d73-abea-4c690281aa53"
 UUIDs = "cf7118a7-6976-5b1a-9a39-7adc72f591a4"
+
+[weakdeps]
+GraphPlot = "a2cc645c-3eea-5389-862e-a155d0052231"
+
+[extensions]
+DFGPlots = "GraphPlot"
 
 [compat]
 CSV = "0.10"
@@ -41,12 +46,11 @@ Pkg = "1.4, 1.5"
 ProgressMeter = "1"
 RecursiveArrayTools = "2"
 Reexport = "1"
-Requires = "1"
 StaticArrays = "1"
 StructTypes = "1"
 TensorCast = "0.3.3, 0.4"
 TimeZones = "1.3.1"
-julia = "1.8"
+julia = "1.9"
 
 [extras]
 DataStructures = "864edb3b-99cc-5e75-8d2d-829cb0a9cfe8"
