--- a/Project.toml
+++ b/Project.toml
@@ -46,7 +46,7 @@ FileIO = "1"
 GraphPlot = "0.5.0"
 Graphs = "1.4"
 JSON3 = "1"
-ManifoldsBase = "0.12, 0.13, 0.14"
+ManifoldsBase = "0.12, 0.13, 0.14, 0.15"
 OrderedCollections = "1.4"
 Pkg = "1.4, 1.5"
 ProgressMeter = "1"
