--- a/Project.toml
+++ b/Project.toml
@@ -52,7 +52,7 @@ Pkg = "1.4, 1.5"
 ProgressMeter = "1"
 RecursiveArrayTools = "2"
 Reexport = "1"
-SHA = "0.7"
+SHA = "0.7, 1"
 StaticArrays = "1"
 StructTypes = "1"
 Tar = "1.9"
