--- a/Project.toml
+++ b/Project.toml
@@ -50,7 +50,7 @@ ManifoldsBase = "0.14, 0.15"
 OrderedCollections = "1.4"
 Pkg = "1.4, 1.5"
 ProgressMeter = "1"
-RecursiveArrayTools = "2"
+RecursiveArrayTools = "2, 3"
 Reexport = "1"
 SHA = "0.7, 1"
 StaticArrays = "1"
