--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,7 +18,7 @@ jobs:
       fail-fast: false
       matrix:
         version:
-          - '~1.10.0-0'
+          - '1.10'
           - 'nightly'
         os:
           - ubuntu-latest
@@ -82,7 +82,7 @@ jobs:
       - name: Setup julia
         uses: julia-actions/setup-julia@v1
         with:
-          version: 1.9
+          version: '1.10'
           arch: x64
 
       - name: Build Docs
