--- a/Project.toml
+++ b/Project.toml
@@ -37,28 +37,39 @@ GraphPlot = "a2cc645c-3eea-5389-862e-a155d0052231"
 DFGPlots = "GraphPlot"
 
 [compat]
+Aqua = "0.8"
+Base64 = "1.10"
 CSV = "0.10"
 CodecZlib = "0.7"
 Colors = "0.10, 0.11, 0.12"
+DataStructures = "0.18"
+Dates = "1.10"
 Distributions = "0.23, 0.24, 0.25"
 DocStringExtensions = "0.8, 0.9"
 FileIO = "1"
 GraphPlot = "0.5.0"
 Graphs = "1.4"
+InteractiveUtils = "1.10"
 JSON3 = "1"
+LinearAlgebra = "1.10"
 ManifoldsBase = "0.14, 0.15"
+Manifolds = "0.9"
 OrderedCollections = "1.4"
 Pkg = "1.4, 1.5"
 ProgressMeter = "1"
 RecursiveArrayTools = "2"
 Reexport = "1"
 SHA = "0.7, 1"
+SparseArrays = "1.10"
 StaticArrays = "1"
+Statistics = "1.10"
 StructTypes = "1"
 Tar = "1.9"
+Test = "1.10"
 TensorCast = "0.3.3, 0.4"
 TimeZones = "1.3.1"
-julia = "1.9"
+UUIDs = "1.10"
+julia = "1.10"
 
 [extras]
 Aqua = "4c88cf16-eb10-579e-8560-4a9242c79595"
