--- a/Project.toml
+++ b/Project.toml
@@ -42,7 +42,7 @@ Aqua = "0.8"
 Base64 = "1.10"
 CSV = "0.10"
 CodecZlib = "0.7"
-Colors = "0.10, 0.11, 0.12"
+Colors = "0.10, 0.11, 0.12, 0.13"
 DataStructures = "0.18"
 Dates = "1.10"
 Distributions = "0.23, 0.24, 0.25"
