--- a/Project.toml
+++ b/Project.toml
@@ -33,12 +33,15 @@ UUIDs = "cf7118a7-6976-5b1a-9a39-7adc72f591a4"
 
 [weakdeps]
 GraphPlot = "a2cc645c-3eea-5389-862e-a155d0052231"
+Arrow = "69666777-d1a9-59fb-9406-91d4454c9d45"
 
 [extensions]
 DFGPlots = "GraphPlot"
+BlobArrow = "Arrow"
 
 [compat]
 Aqua = "0.8"
+Arrow = "2.7"
 Base64 = "1.10"
 CSV = "0.10"
 CodecZlib = "0.7"
